Colaboratory を使用して作成しました

--- a/20210728Labo00.ipynb
+++ b/20210728Labo00.ipynb
@@ -6,7 +6,7 @@
       "name": "20210728Labo00.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOyjAPsBp7E07Rwrex7iQTs",
+      "authorship_tag": "ABX9TyOLNiAcQJB1lJz3ylOAIgJc",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -118,7 +118,8 @@
       "cell_type": "code",
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "SVzLr0hljTsm",
         "outputId": "47b0bd20-5d8c-4286-ff40-9851a531c95c"
@@ -536,7 +537,8 @@
       "cell_type": "code",
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "TTV3AxhxsLuG",
         "outputId": "10fa1717-f994-44a8-c671-268283a0b8cd"
@@ -576,7 +578,8 @@
       "cell_type": "code",
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "_w8Y_R6ssmNB",
         "outputId": "d622ba83-1fae-4108-b68f-e75e8a4ca675"
@@ -618,7 +621,8 @@
       "cell_type": "code",
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "esPMQeC6t_PU",
         "outputId": "2251a6c7-c546-485f-ef3b-c543a92efcc7"
@@ -658,9 +662,70 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "aAdcH9Vky6-f"
+      },
+      "source": [
+        "例えば次のような言葉を人が投げた時に"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
-        "id": "UToiLG2aujvu"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "UToiLG2aujvu",
+        "outputId": "3acfffc3-d81d-44fe-e312-0337b326d3de"
+      },
+      "source": [
+        "print(mecab.parse('今日も暑いねえ。'))"
+      ],
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "今日 も 暑い ねえ 。 \n",
+            "\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "9zAXtJhrzDEB"
+      },
+      "source": [
+        "上のように `形態素解析` して「どのように返事を構成するか」だ。\n",
+        "\n",
+        "昔の人口無脳なら形態素解析なんていう「大量に出来上がったデータが必要となる」プログラムなど夢のまた夢だったので，\n",
+        "1. 鸚鵡返し\n",
+        "2. 質問返し「今日って何」とか「熱いって何」とか\n",
+        "（これも本来は形態素解析が必要だけど工夫次第でそれなりに実行できるのだ）\n",
+        "3. 初めての会話でなければ，蓄積された会話のデータから「それらしいもの」を選んで返す\n",
+        "\n",
+        "あたりが定番だった。"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "qNy7SROv0XLH"
+      },
+      "source": [
+        "もちろんその中に既にマルコフ連鎖やマルコフ連鎖もどきも。\n",
+        "ただし形態素解析が望み薄だったのでとても「ええかげん」なものだった。\n",
+        "でも今や信頼のおける形態素解析が簡単に使えるので...となるわけだ。"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Dh-8Qcccy5JH"
       },
       "source": [
         ""
